--- a/index.html
+++ b/index.html
@@ -3,108 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pastel Product Store</title>
-    <!-- <style>
-        :root {
-            --bg-color: #1e1e1e;
-            --card-bg: #2e2e2e;
-            --text-color: #ffffff;
-            --btn-color: #000000;
-            --nav-bg: #292929;
-            --nav-hover: #444;
-        }
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background: var(--bg-color);
-            color: var(--text-color);
-            overflow-x: hidden;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .store-title {
-            font-size: 2rem;
-            font-weight: bold;
-            margin: 20px 0;
-            text-align: center;
-        }
-        /* Navbar Styles */
-        .navbar {
-            display: flex;
-            justify-content: center;
-            background: var(--nav-bg);
-            padding: 15px 0;
-            width: 100%;
-        }
-        .nav-item {
-            margin: 0 15px;
-            padding: 10px 15px;
-            font-size: 1rem;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-        .nav-item:hover, .nav-item.active {
-            background: var(--nav-hover);
-        }
-
-        .container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            padding: 20px;
-            max-width: 1200px;
-            width: 100%;
-        }
-        .product-card {
-            background: var(--card-bg);
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            padding: 15px;
-            text-align: center;
-            transition: background 0.3s ease-in-out, transform 0.3s ease-in-out;
-        }
-        .product-card:hover {
-            transform: translateY(-5px);
-        }
-        .product-card img {
-            width: 100%;
-            height: 220px;
-            object-fit: contain;
-            border-radius: 8px;
-        }
-        .product-card h3 {
-            margin: 10px 0;
-            font-size: 1.2rem;
-        }
-        .product-card p {
-            font-size: 0.9rem;
-            opacity: 0.8;
-            margin-bottom: 10px;
-        }
-        .product-card h4 {
-            font-size: 1.2rem;
-            color: var(--text-color);
-            margin: 5px 0;
-        }
-        .buy-btn {
-            margin-top: 10px;
-            padding: 10px 15px;
-            background: var(--btn-color);
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            text-decoration: none;
-            font-weight: bold;
-            display: inline-block;
-            transition: background 0.3s ease-in-out;
-        }
-    </style> -->
-
+    <title>Reels Product Store</title>
+    <meta name="google-site-verification" content="-5wlE2td6e_tv67g340PwnjsRkoA8dJmA8Rs8pX5hQo" />
     <style>
       :root {
         --bg-color: #1e1e1e;
@@ -315,9 +215,6 @@
         }
       }
     </style> 
-  
-
-    
 </head>
   <body>
     <div class="store-title">Reels Product Store</div>
