--- a/index.html
+++ b/index.html
@@ -245,11 +245,53 @@
           link: "https://amzn.to/40Ta04d",
         },
         {
+          image: "https://m.media-amazon.com/images/I/61QboKakvIL._SX522_.jpg",
+          name: "SUGAR Cosmetics Matte as Hell Lip Crayon",
+          price: "₹359",
+          category: "Makeup",
+          link: "https://amzn.to/41gRLEj",
+        },
+        {
           image: "https://m.media-amazon.com/images/I/41TRCSw9sxL._SX679_.jpg",
           name: "Clayco Hydrating Rice & Sake Sleep Mask",
           price: "₹968",
           category: "Skincare",
           link: "https://amzn.to/4eABmPW",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/71A7tvxJXPL._SX679_PIbundle-3,TopRight,0,0_AA679SH20_.jpg",
+          name: "Ghar Soaps Sandalwood & Saffron Magic Soaps For Bath",
+          price: "₹399",
+          category: "Skincare",
+          link: "https://amzn.to/4gVQIiV",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/51O+J5jnXcL._SX679_.jpg",
+          name: "Cetaphil Paraben, Sulphate-Free Gentle Skin Hydrating Face Wash",
+          price: "₹398",
+          category: "Skincare",
+          link: "https://amzn.to/41xxeN3",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/51VLdPNtSWL._SX679_.jpg",
+          name: "Deconstruct Face Gel Sunscreen SPF 50",
+          price: "₹331",
+          category: "Skincare",
+          link: "https://amzn.to/4bn0ABq",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/515qmIG0GoL._SX679_.jpg",
+          name: "DOT & KEY Vitamin C + E Super Bright Sunscreen Spf 50 |Water-Light,UVA/UVB & Blue Light Protection",
+          price: "₹396",
+          category: "Skincare",
+          link: "https://amzn.to/41JEvd7",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/61eUUcx27OL._SX679_.jpg",
+          name: "Dot & Key Watermelon Cooling Sunscreen SPF 50+ PA++++ | With Hyaluronic Acid, Instantly Cools Skin",
+          price: "₹383",
+          category: "Skincare",
+          link: "https://amzn.to/3QEgc9Y",
         },
         {
           image: "https://m.media-amazon.com/images/I/31MpnCSt1RL._SX450_.jpg",
@@ -392,6 +434,13 @@
           price: "₹459",
           category: "Cloths",
           link: "https://amzn.to/4igeJ5g",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/513fraGQXWL._SY741_.jpg",
+          name: "Fruit of the Loom Men's 6-Pack Stay Tucked Crew T-Shirt",
+          price: "9401",
+          category: "Cloths",
+          link: "https://amzn.to/41CFITu",
         },
         {
           image: "https://m.media-amazon.com/images/I/61sZFOmh+yL._SX522_.jpg",
