--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <!-- Category Navigation -->
     <div class="navbar">
       <div class="nav-item active" data-category="all">All</div>
-      <div class="nav-item" data-category="Makeup">Makeup</div>
+      <div class="nav-item" data-category="Beauty">Beauty</div>
       <div class="nav-item" data-category="Skincare">Skincare</div>
       <div class="nav-item" data-category="Iphone">Iphone</div>
       <div class="nav-item" data-category="RCB">RCB</div>
@@ -241,15 +241,50 @@
           image: "https://m.media-amazon.com/images/I/61moPB8PnNL._SL1500_.jpg",
           name: "RENEE Midnight Kohl Kajal Pencil",
           price: "₹387",
-          category: "Makeup",
+          category: "Beauty",
           link: "https://amzn.to/40Ta04d",
         },
         {
           image: "https://m.media-amazon.com/images/I/61QboKakvIL._SX522_.jpg",
           name: "SUGAR Cosmetics Matte as Hell Lip Crayon",
           price: "₹359",
-          category: "Makeup",
+          category: "Beauty",
           link: "https://amzn.to/41gRLEj",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/71nGfxIFFLL._SX679_.jpg",
+          name: "Deconstruct 10% Non-Irritating Vitamin C Face Serum",
+          price: "₹466",
+          category: "Beauty",
+          link: "https://amzn.to/3QGMQYk",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/61VJwqJD2oL._SX522_.jpg",
+          name: "INSIGHT Cosmetics Pro Concealer Palette Waterproof Concealer With Full Coverage",
+          price: "₹207",
+          category: "Beauty",
+          link: "https://amzn.to/3D7F5ru",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/61hRcCafYlL._SX679_.jpg",
+          name: "FACESCANADA Weightless Stay Matte Finish Compact Powder - Ivory, 9 G | Non Oily Matte Look",
+          price: "₹136",
+          category: "Beauty",
+          link: "https://amzn.to/43eDqLq",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/51Q9fyFXZ6L._SX679_.jpg",
+          name: "Lakme Blush & Glow Exfoliating Face Wash with Vitamin C Serum",
+          price: "₹249",
+          category: "Beauty",
+          link: "https://amzn.to/4hVdMzF",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/61h5DAu8jHL._SX522_PIbundle-2,TopRight,0,0_AA522SH20_.jpg",
+          name: "iORA Prebiotic Glow Ritual combo | Foaming Facewash (100 ml) + Glow Mask ",
+          price: "₹1018",
+          category: "Beauty",
+          link: "https://amzn.to/3D9pwiZ",
         },
         {
           image: "https://m.media-amazon.com/images/I/41TRCSw9sxL._SX679_.jpg",
@@ -301,6 +336,20 @@
           link: "https://amzn.to/4fneTqX",
         },
         {
+          image: "https://m.media-amazon.com/images/I/615V450FvXL._SX679_.jpg",
+          name: "Perpetual Adiyogi Paintings for Wall Decoration - Set Of Five, 3d Scenery Vastu Wall Painting for Living Room",
+          price: "₹1029",
+          category: "Decoration",
+          link: "https://amzn.to/4kjNuJa",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/71OeySj326L._SX679_.jpg",
+          name: "perpetual Ganesh Wall Hanging | Painting for Wall Decoration | 3D Painting | Wall Painting for Living Room",
+          price: "₹429",
+          category: "Decoration",
+          link: "https://amzn.to/4hXsGW6",
+        },
+        {
           image: "https://m.media-amazon.com/images/I/41uEIIav6sS.jpg",
           name: "Happy Decor I Wooden Laddu Gopal Jhula",
           price: "₹2199",
@@ -313,6 +362,20 @@
           price: "₹2499",
           category: "Decoration",
           link: "https://amzn.to/3zZWSir",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/71JnyMGoUQL._SX679_.jpg",
+          name: "Wood Kotart Modern Art Framed Wall Paintings/ Hangings For Living Room",
+          price: "₹999",
+          category: "Decoration",
+          link: "https://amzn.to/4bjypTD",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/51Oq79-eK-L._SX522_.jpg",
+          name: "One94Store 3D Galaxy Crystal Ball Night Lamp - Engraved USB Table LED Wooden Light for Home Office",
+          price: "₹251",
+          category: "Decoration",
+          link: "https://amzn.to/4h2aXLS",
         },
         {
           image: "https://m.media-amazon.com/images/I/61fISr5fFgL._SY450_.jpg",
@@ -464,12 +527,61 @@
           link: "https://amzn.to/4hXYAC6",
         },
         {
-          image: "https://m.media-amazon.com/images/I/713A-uekVtL._SY741_.jpg",
-          name: "Rcb Jersey 2025 for Womens",
-          price: "₹349",
-          category: "RCB",
-          link: "",
+          image: "https://m.media-amazon.com/images/I/51lhpG-9FIL._SX522_.jpg",
+          name: "EDNITA Cable Protector with 3D Cute Pattern for iPhone Charger only",
+          price: "₹199",
+          category: "Iphone",
+          link: "https://amzn.to/4bB7xyV",
         },
+        {
+          image: "https://m.media-amazon.com/images/I/61cK++Cg+LL._SX522_.jpg",
+          name: "Sounce 25 Pcs Spiral Cable Protectors & Wire Protectors Spring Wire for All Wired Accessories for USB Charger",
+          price: "₹99",
+          category: "Iphone",
+          link: "https://amzn.to/4hNzOo1",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/81pt91pc-YL._SX522_.jpg",
+          name: "Elzzi Compatible with iPhone 14 Case 3D Laser Flower Oil Painting Cute Colorful Blue Ray Bumper with Full Camera Protection",
+          price: "₹749",
+          category: "Iphone",
+          link: "https://amzn.to/3Xj15qd",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/71wGhGkPRUL._SY741_.jpg",
+          name: "Cat Care Adorable Women Teen Girls Back Cover Cases for iPhone 14",
+          price: "₹479",
+          category: "Iphone",
+          link: "https://amzn.to/4h386T8",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/51EyUxlCUqL._SX679_.jpg",
+          name: "Boldfit Plastic Royal Challengers Bengaluru Rcb Sipper Water Bottles Water Bottle",
+          price: "₹399",
+          category: "RCB",
+          link: "https://amzn.to/3D0wmHE",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/81VbLGudkxL._SX679_.jpg",
+          name: "CHHAAP Virat Kohli RCB Ipl Team Mugs Gift for Ipl Lover Cricket Lover Kids Brother Sister Son",
+          price: "₹159",
+          category: "RCB",
+          link: "https://amzn.to/3F7Occ5",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/61rMcIJDPCL._SY741_.jpg",
+          name: "Blacktail Rcb Jersey, rcb Jersey kohli,virat Jersey,virat t Shirt,rcb Jersey Key Ring",
+          price: "₹255",
+          category: "RCB",
+          link: "https://amzn.to/43dmzIM",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/51jpAPrWgSL._SX679_.jpg",
+          name: "Puma Boy's Printed Regular Fit T-Shirt",
+          price: "₹969",
+          category: "RCB",
+          link: "https://amzn.to/3XnDEvN",
+        }
       ];
 
       const container = document.getElementById("product-container");
