--- a/index.html
+++ b/index.html
@@ -227,6 +227,10 @@
           font-size: 0.8rem;
         }
       }
+      .red-off{
+        color: red;
+        font-weight: bold;
+      }
     </style>
   </head>
   <body>
@@ -238,6 +242,7 @@
       <div class="nav-item" data-category="Beauty">Beauty</div>
       <div class="nav-item" data-category="Skincare">Skincare</div>
       <div class="nav-item" data-category="Iphone">Iphone</div>
+      <div class="nav-item red-off" data-category="80% OFF">80% OFF</div>
       <div class="nav-item" data-category="RCB">RCB</div>
       <div class="nav-item" data-category="Cloths">Cloths</div>
       <div class="nav-item" data-category="Decoration">Decoration</div>
@@ -270,6 +275,27 @@
           price: "₹466",
           category: "Beauty",
           link: "https://amzn.to/3QGMQYk",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/61JXNIi0L8L._SX679_.jpg",
+          name: "THE LOVE CO. Japanese Cherry Blossom Body Lotion 250ml | Hydrating Body Moisturizer for Dry Skin",
+          price: "₹395",
+          category: "Beauty",
+          link: "https://amzn.to/4hXSNfI",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/61kwrAyy2vL._SX679_PIbundle-5,TopRight,0,0_AA679SH20_.jpg",
+          name: "Ceramide Glow Rice Radiance Combo For Korean Glass Skin",
+          price: "₹899",
+          category: "Beauty",
+          link: "https://amzn.to/3DeHAZ4",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/51ZayPa7FkL._SX679_.jpg",
+          name: "Mamaearth Rice Face Wash With Rice Water & Niacinamide for Glass Skin | For Hydrated & Even Skin Tone",
+          price: "₹340",
+          category: "Beauty",
+          link: "https://amzn.to/43kGNQT",
         },
         {
           image: "https://m.media-amazon.com/images/I/61VJwqJD2oL._SX522_.jpg",
@@ -322,6 +348,69 @@
           category: "Skincare",
           link: "https://amzn.to/41xxeN3",
         },
+        {
+          image: "https://m.media-amazon.com/images/I/51raakZN9fL._SX679_.jpg",
+          name: "OnePlus Nord Buds 2r True Wireless in Ear Earbuds with Mic, 12.4mm Drivers",
+          price: "₹1699",
+          category: "80% OFF",
+          link: "https://amzn.to/3EUKVNw",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/61jbEMBJvBL._SX522_.jpg",
+          name: "Noise Newly Launched Buds Trooper in Ear True Wireless Earbuds",
+          price: "₹699",
+          category: "80% OFF",
+          link: "https://amzn.to/3Xo2Hii",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/51CfKYzmFsL._SL1500_.jpg",
+          name: "OnePlus Nord Buds 3 Truly Wireless Bluetooth in Ear Earbuds",
+          price: "₹2199",
+          category: "80% OFF",
+          link: "https://amzn.to/41iPzw3",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/61PYkqwxP0L._SX522_.jpg",
+          name: "boAt Airdopes 311 Pro, 50HRS Battery, Fast Charge, Dual Mics ENx Tech",
+          price: "₹899",
+          category: "80% OFF",
+          link: "https://amzn.to/3QFfc5C",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/71fhOp-12tL._SX522_.jpg",
+          name: "Boult Newly Launched Z20 Truly Wireless Bluetooth Ear Buds",
+          price: "₹999",
+          category: "80% OFF",
+          link: "https://amzn.to/4h4WcIq",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/61VQWxrKgjL._SY695_.jpg",
+          name: "Bacca Bucci® Men's Energy Afterburn Disruptor for Multiple Sports",
+          price: "₹1199",
+          category: "80% OFF",
+          link: "https://amzn.to/4ig2nKA",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/61Ws1UdFKxL._SY741_.jpg",
+          name: "Lymio Men Cargo || Men Cargo Pants || Men Cargo Pants Cotton",
+          price: "₹649",
+          category: "80% OFF",
+          link: "https://amzn.to/3QFghKq",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/71O6djFBtsL._SY695_.jpg",
+          name: "Bacca Bucci Balancer Men's Fashion Sneakers Lace-Up Trainers Basketball Style Walking Shoes",
+          price: "₹1399",
+          category: "80% OFF",
+          link: "https://amzn.to/3XKOvAr",
+        },
+        {
+          image: "https://m.media-amazon.com/images/I/71T9KK6eFBL._SX679_.jpg",
+          name: "NAKPRO Gold Whey Protein Concentrate 80%, 500g Unflavoured | 28g Protein, 6.2g BCAA",
+          price: "₹919",
+          category: "80% OFF",
+          link: "https://amzn.to/3EWpCed",
+        },     
         {
           image: "https://m.media-amazon.com/images/I/51VLdPNtSWL._SX679_.jpg",
           name: "Deconstruct Face Gel Sunscreen SPF 50",
